# photos

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  pyproject.toml
app/: Cargo.toml
app/src/: main.rs  photo_library.rs  thumb_size.rs
app/src/components/: faces_view.rs  gallery_view.rs  import_view.rs  mod.rs  navbar.rs  photo_viewer.rs
assets/icons/: make_icons.sh
crates/app/: Cargo.toml
crates/app/src/: main.rs  photo_library.rs
crates/app/src/components/: faces_view.rs  gallery_view.rs  navbar.rs  photo_viewer.rs  thumbnail.rs
crates/cv/examples/: face-detection.rs
crates/cv/src/: face_detection.rs  face_embedding.rs  lib.rs
crates/photo-library/: Cargo.toml
crates/photo-library/src/: config.rs  lib.rs
crates/photo-library/src/workers/: db_worker.rs  image_loader_worker.rs  import_worker.rs  mod.rs
crates/photos-app/: Cargo.toml
crates/photos-app/src/: config.rs  errors.rs  events.rs  job_manager.rs  lib.rs  runtime.rs  service_registry.rs  steps.rs
crates/photos-app/src/jobs/: common.rs  get_image_task.rs  mod.rs
crates/photos-app/src/jobs/embedding_generation/: cluster_embeddings.rs  dispatch_embedding_generation.rs  generate_embeddings.rs  mod.rs
crates/photos-app/src/jobs/face_detection/: detect_faces.rs  dispatch_face_detection.rs  mod.rs
crates/photos-app/src/jobs/import/: import_item.rs  mod.rs
crates/photos-app/src/jobs/tasks/: discover_import_items_task.rs  get_face_clusters_task.rs  get_face_detection_thumbnail_task.rs  get_image_ids_task.rs  get_thumbnail_from_file_task.rs  get_thumbnail_task.rs  mod.rs
crates/photos-app/src/tasks/: cluster_embeddings.rs  common.rs  detect_faces.rs  dispatch_embedding_generation.rs  dispatch_face_detection.rs  generate_embeddings.rs  import_item.rs  mod.rs
crates/photos-core/: Cargo.toml
crates/photos-core/src/: lib.rs
crates/photos-domain/: Cargo.toml
crates/photos-domain/src/: errors.rs  image_features.rs  lib.rs
crates/photos-infra-cv/: Cargo.toml  build.rs
crates/photos-infra-cv/src/: errors.rs  face_clustering.rs  face_detection.rs  face_embedding.rs  lib.rs
crates/photos-infra-fast-image-resize-resizer/: Cargo.toml
crates/photos-infra-fast-image-resize-resizer/src/: lib.rs
crates/photos-infra-fs-repository/: Cargo.toml
crates/photos-infra-fs-repository/src/: lib.rs
crates/photos-infra-import-item-discovery/: Cargo.toml  Cargo.toml.bak
crates/photos-infra-import-item-discovery/src/: lib.rs
crates/photos-infra-sqlite-image-metadata-repository/: Cargo.toml
crates/photos-infra-sqlite-image-metadata-repository/migrations/: 20251221124248_init.sql
crates/photos-infra-sqlite-image-metadata-repository/src/: lib.rs
crates/photos-services/: Cargo.toml
crates/photos-services/src/: lib.rs
crates/photos-task-queue/: Cargo.toml
crates/photos-task-queue/src/: lib.rs  queue.rs  task.rs  triple_queue.rs
crates/photos-ui/: Cargo.toml  Cargo.toml.bak
crates/photos-ui/src/: app_proxy.rs  main.rs
crates/photos-ui/src/app_proxy/: mod.rs  storage.rs
crates/photos-ui/src/components/: dynamic_grid.rs  gallery.rs  image.rs  mod.rs  navbar.rs
crates/photos-ui/src/views/: faces.rs  gallery.rs  import.rs  import_selection.rs  mod.rs
crates/photos-workflow/: Cargo.toml
crates/photos-workflow/src/: cancellation.rs  errors.rs  job.rs  lib.rs  progress.rs  step.rs  workflow.rs
cv/: Cargo.toml
cv/src/: face_clustering.rs  face_detection.rs  face_embedding.rs  lib.rs
face-recognition/: Cargo.toml
face-recognition-ort/: Cargo.toml
face-recognition-ort/examples/: face-detection.rs
face-recognition-ort/src/: lib.rs
face-recognition/src/: coreml_model.rs  face_embedding.rs  face_image.rs  lib.rs  utils.rs
gui/: App.css  App.tsx  PhotoGallery.tsx  SingleImageViewer.tsx
photo-library/: Cargo.toml
photo-library/src/: config.rs  lib.rs
photo-library/src/workers/: cv_worker.rs  db_worker.rs  image_loader_worker.rs  import_worker.rs  mod.rs
scripts/: make_thumbnails.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
