[workspace]
resolver = "3"
members = [
    "crates/app",
    "crates/cv",
    "crates/photo-library",
    "crates/photos-core",
    "crates/photos-domain",
    "crates/photos-infra-fast-image-resize-resizer",
    "crates/photos-infra-fs-repository",
    "crates/photos-infra-sqlite-image-metadata-repository",
    "crates/photos-services",
    "crates/photos-workflow",
]
exclude = ["models", "test_data", "runs"]

[workspace.dependencies]
anyhow = "1.0.100"
image = "0.25.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
tokio = { version = "1.48.0", features = ["full"] }
