[workspace]
resolver = "3"
members = [
    "crates/photos-app",
    "crates/photos-core",
    "crates/photos-domain", "crates/photos-infra-cv",
    "crates/photos-infra-fast-image-resize-resizer",
    "crates/photos-infra-fs-repository",
    "crates/photos-infra-import-item-discovery",
    "crates/photos-infra-sqlite-image-metadata-repository",
    "crates/photos-services",
    "crates/photos-task-queue",
    "crates/photos-ui",
]
exclude = ["assets", "test_data"]

[workspace.dependencies]
anyhow = "1.0.100"
image = "0.25.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "ansi"] }
tokio = { version = "1.48.0", features = ["full"] }
chrono = "0.4.43"
thiserror = "2.0.17"
tokio-util = { version = "0.7.18", features = ["full"] }

[profile.release-debug]
inherits = "release"
debug = true
