[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.32.3"
egui_extras = { version = "0.32.3", features = ["default", "image"] }
egui_infinite_scroll = { version = "0.8.0", features = ["egui_extras"] }
egui_virtual_list = "0.8.0"
env_logger = { version = "0.11.8", features = ["auto-color", "humantime"] }
rand = "0.9.2"
