[package]
name = "face-recognition-ort"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = "0.17.0"
ort = "2.0.0-rc.10"
image = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
imageproc = "0.25.0"

[[example]]
name = "face-detection"
