[package]
name = "photo-library"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.48.0", features = ["full"] }
lru = "0.16.2"
image = { workspace = true }

[dev-dependencies]
tempdir = "0.3.7"