[package]
name = "photo-library"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { workspace = true }
lru = "0.16.2"
image = { workspace = true }
cv = { path = "../cv" }
bytemuck = "1.24.0"
futures = "0.3.31"
rayon = "1.11.0"
tokio-util = { version = "0.7.16", features = ["full"] }
tracing = "0.1.41"
tracing-test = "0.2.5"

[dev-dependencies]
tempdir = "0.3.7"
