[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.0"
dirs = "6.0.0"
image = { workspace = true }
photo-library = { path = "../photo-library" }
tokio = { workspace = true }
tracing-subscriber.workspace = true
tracing = { workspace = true }
cv = { path = "../cv" }
rfd = "0.14"
anyhow = { workspace = true }
once_cell = "1.20.2"
parking_lot = "0.12"
pollster = "0.3"
