[package]
name = "photos-app"
version = "0.1.0"
edition = "2024"

[dependencies]
photos-core = { path = "../photos-core" }
photos-domain = { path = "../photos-domain" }
photos-services = { path = "../photos-services" }
photos-infra-fast-image-resize-resizer = { path = "../photos-infra-fast-image-resize-resizer" }
photos-infra-fs-repository = { path = "../photos-infra-fs-repository" }
photos-infra-sqlite-image-metadata-repository = { path = "../photos-infra-sqlite-image-metadata-repository" }
photos-infra-import-item-discovery = { path = "../photos-infra-import-item-discovery" }
photos-infra-cv = { path = "../photos-infra-cv" }
photos-task-queue = { path = "../photos-task-queue" }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
env = "1.0.1"
tokio-util = { workspace = true }
