[package]
name = "photos-infra-cv"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = "0.17.1"
ort = "2.0.0-rc.10"
image = { workspace = true }
hdbscan = "0.12.0"
photos-domain = { path = "../photos-domain" }
photos-services = { path = "../photos-services" }
tracing = { workspace = true }

[build-dependencies]
reqwest = "0.13.2"
tokio = { workspace = true }
