[package]
name = "photos-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.0"
dirs = "6.0.0"
image = { workspace = true }
photos-app = { path = "../photos-app" }
photos-domain = { path = "../photos-domain" }
photos-core = { path = "../photos-core" }
tokio = { workspace = true }
anyhow = { workspace = true }
egui-file-dialog = "0.12.0"
tracing-subscriber = { workspace = true }
