[package]
name = "photos-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33.0", features = ["persistence"] }
dirs = "6.0.0"
image = { workspace = true }
photos-app = { path = "../photos-app" }
photos-domain = { path = "../photos-domain" }
photos-core = { path = "../photos-core" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
toml = "0.9.11"
directories = "6.0.0"
config = "0.15.19"
serde = { version = "1.0.228", features = ["derive"] }
tracing.workspace = true
rfd = "0.17.2"

[package.metadata.bundle]
name = "Photos"
identifier = "com.mishakis.photos"
icon = ["assets/icons/icon.icns"]
version = "0.0.0"
category = "public.app-category.photography"
resources = [
  "assets/models/yolov12n-face.onnx",
  "assets/models/facenet.onnx",
]
