[package]
name = "photos-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33.0", features = ["persistence"] }
image = { workspace = true }
photos-app = { path = "../photos-app" }
photos-domain = { path = "../photos-domain" }
photos-core = { path = "../photos-core" }
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
rfd = "0.17.2"
lru = "0.16.3"

[package.metadata.bundle]
name = "Photos"
identifier = "com.mishakis.photos"
icon = ["assets/icons/icon.icns"]
version = "0.0.0"
category = "public.app-category.photography"
resources = [
  "assets/models/yolov12n-face.onnx",
  "assets/models/facenet.onnx",
]
