[package]
name = "photos-workflow"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
dashmap = "6.1.0"
futures = "0.3.31"
photos-core = { path = "../photos-core" }
photos-domain = { path = "../photos-domain" }
photos-services = { path = "../photos-services" }
thiserror = "2.0.17"
tokio = { workspace = true }
tokio-util = { version = "0.7.16", features = ["full"] }
